[package]
name = "lotus-texture-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytebuffer = "2.2.0"
ddsfile = "0.5.2"
derivative = "2.2.0"
log = "0.4.20"
lotus-lib = { version = "3.*", features = ["internal"] }
zerocopy = { version = "0.7.32", features = ["derive"] }
